# slither-py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
assets/fonts/: README.md
slither/: __main__.py  config.py
slither/core/: board.py  food.py  game.py  gamestate.py  score_manager.py  skin_manager.py  snake.py
slither/skins/: classic.py  fire.py  forest.py  halloween.py  ice.py  matrix.py  monochrome.py  ocean.py  pastel.py  solarized.py  sunset.py  synthwave.py
slither/ui/: renderer.py  sound.py
tests/: test_snake.py
